# jade_cocoon_reversing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  linker_command_file.txt  slus_008.54.yaml  symbol_addrs.txt
.github/workflows/: ci.yml
scripts/: bss.py  requirements.txt  splat_split.bat  splat_split.sh
scripts/ida/: generate_symbol_addrs.py  load_overlay_into_idb.py
scripts/pcsx-redux/: pcsx.lua
src/: CMakeLists.txt  common.h  enums.h  funcs.c  funcs.h  globals.c  globals.h  main.c  sound.c  sound.h  stubs.c  stubs.h
src/data/: bss.c
